Mon May 10 15:27:34 1999  Danilo Almeida  <dalmeida@mit.edu>

	* Makefile.in: Do win32 build in subdir.

1998-05-06  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* getopt.c (getopt): POSIX states that getopt returns -1
		when it is done parsing options, not EOF.